--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en-us">
 
+<head>
+  <meta charset="UTF-8">
+  <title>JamQuiz.</title>
+</head>
+
+<body>
+
+<!--
+Insert Spotify Authenthicaiton API
+
+-->
+
+
+<!--
+Form - User Input: User Name and Password
+-->
+
+
+
+
+</body>
+
+</html>
