--- a/game.html
+++ b/game.html
@@ -4,25 +4,52 @@
 <head>
   <meta charset="UTF-8">
   <title>JamQuiz.</title>
+<!--jquery-->
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+
+  <!-- bootstrap popper -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+
+<!-- bootstrap css -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
+<!-- bootstrap js -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
+  <div class="container">
+<div class="row">
 <!-- center
 ROW 1
 Logo
 -->
+</div>
 
+<div class="row">
+  <div class="col-sm 4">
 <!-- Left Top
 ROW 2
 left:
-Guess section
+Guess section-->
+  </div>
 
-right:
-timer
+  <div class="col-sm-4">
+<!-- right:
+timer -->
 
--->
+  </div>
+</div>
 
+<div class="row">
+
+  <div class="col-sm-4">
+
+  </div>
 <!--
 ROW 3
 Center
@@ -30,33 +57,53 @@ Audio VIsual space
 
 Center:
 Music player/ something function
-game starts
+game starts-->
+  <div class="col-sm-4">
 
-Music timer
+  </div>
+<!--Music timer
 
 Right:
 Points
 -->
+  <div class="col-sm-4">
 
+  </div>
+</div>
+
+<div class="row">
 <!--
 ROW 4
 Left:
-Guess Logo
+Guess Logo-->
+<div class="col-sm-4">
 
-Right:
+</div>
+
+<div class="col-sm-4">
+
+</div>
+<!--Right:
 Point Calculator
 Shows total points accumulated
 -->
 
+<div class="col-sm-4">
 
+</div>
+</div>
+
+
+<div class="row">
 <!--
 ROW 5
 ACross Screen ROW
 Hints Section
 -->
+</div>
 
-
-
+</div>
+<!-- end container -->
 
 </body>
 
