--- a/musicplayer.html
+++ b/musicplayer.html
@@ -11,12 +11,13 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 
+<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
 <body>
 
 
-<div class="container">
+<div id="container">
 
   <div id="audioImg">
     <img class="cover">
