--- a/app/musicplayer.html
+++ b/app/musicplayer.html
@@ -60,7 +60,7 @@
   </div>
 </div>
 
-  <script type="text/javascript" src="./mediaplayer.js">
+  <script type="text/javascript" src="js/mediaplayer.js">
 
 
   </script>
