--- a/app/game.html
+++ b/app/game.html
@@ -72,7 +72,7 @@ Guess section-->
 
   console.log(guess);
 
-  //clear the form when submitting
+  //clears the form after submit
   $("#song-guess").val("");
 
   });
@@ -80,7 +80,7 @@ Guess section-->
   $.post("/api/game"), guess,
   function(data)
   {
-  
+
 
   };
 
