--- a/app/game.html
+++ b/app/game.html
@@ -69,15 +69,33 @@ Guess section-->
   userSongGuess: $("#song-guess").val().trim()
   };
 
-  console.log(guess);
+  console.log(guess.userSongGuess);
+
+  // Loop to create and display previous user guesses
+  // in dynamically made Divs
+
+  for (var i = 0; i < tableData.length; i++) {
+
+    // Create the HTML Well (Section) and Add the table content for each reserved table
+    var oldGuessSpot = $("<div>");
+    oldGuessSpot.addClass("well");
+    tableSection.attr("id", "tableWell-" + i + 1);
+    $("#tableSection").append(guess.userSongGuess);
+
+    var tableNumber = i + 1;
+
+
+    // Then display the remaining fields in the HTML (Section Name, Date, URL)
+    $("#tableWell-" + i + 1).append("<h2><span class='label label-primary'>" + tableNumber + "</span> | " + tableData[i].customerID + "</h2>");
+  }
 
   //clears the form after submit
   $("#song-guess").val("");
 
   });
 
-  $.post("/api/game"), guess,
-  function(data)
+//  $.post("/api/game"), guess,
+//  function(data)
   {
 
 
