--- a/app/index.html
+++ b/app/index.html
@@ -3,26 +3,41 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>JamQuiz.</title>
+  <title>Jam.Quiz.</title>
+ 
+
+  <link rel="stylesheet" type="text/css" href="./public/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css"> 
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  
 </head>
 
 <body>
 
-<!--
-Insert Spotify Authenthicaiton API
+<!-- //HEADER -->
 
--->
+<h1 class="animated rubberBand" onClick="window.location.reload()"> JAM. QUIZ. </h1>
+
+<!-- //END HEADER -->
 
 
-<!--
-Form - User Input: User Name and Password
--->
+<!-- //MAIN DIV -->
 
-<audio
-  src=`http://developer.mozilla.org/@api/deki/files/2926/=AudioTest_(1).ogg`
-  autoplay>
-  Your browser does not support the <code>audio</code> element.
-</audio>
+
+
+
+
+
+<!-- //BOTTOM/ FOOTER --> 
+<div id="footer" class="footer">
+	<h2 class="animated fadeInLeft"> MEET THE TEAM </h2>
+	<h3 class="animated fadeInRight"> THE MASTER DEVELOPER'S PLAYLIST </h3>
+	<h4 class="animated fadeInUp"> Instructions </h4>
+
+</div>
+
+<!-- //END FOOTER -->
 
 
 </body>
