--- a/app/index.html
+++ b/app/index.html
@@ -1,26 +1,19 @@
-<!DOCTYPE html>
-<html lang="en-us">
+<!doctype html>
+<html>
+  <head>
+    <title>welcome to jamquiz</title>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <style type="text/css">
 
-<head>
-  <meta charset="UTF-8">
-  <title>JamQuiz.</title>
-</head>
+    </style>
+  </head>
 
-<body>
+  <body>
+  
+    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script>
 
-<!--
-Insert Spotify Authenthicaiton API
-
--->
-
-
-<!--
-Form - User Input: User Name and Password
--->
-
-
-
-
-</body>
-
+    </script>
+  </body>
 </html>
