--- a/app/index.html
+++ b/app/index.html
@@ -13,32 +13,42 @@
   
 </head>
 
-<body>
+<body class="index">
+
+<!-- // MUSIC GRID : CORY -->
+
+<!-- //On letter key or mouse click, snippet plays, and photo animates into DOM. -->
+
+<!-- //On keypress Audio -->
+
+<!-- //On keypress Photo -->
+
+<!-- // MUSIC GRID END -->
 
 <!-- //HEADER -->
 
-<h1 class="animated rubberBand" onClick="window.location.reload()"> JAM. QUIZ. </h1>
+<h1 class="animated rubberBand"> JAM!QUIZ! </h1>
+<br>
+<br>
+<p><font color="white"> Turn on your sound. Explore the keys. Then click <a href="game.html"> GAME </a> to quiz yourself on your favorite jams! </font></p>
 
 <!-- //END HEADER -->
-
-
-<!-- //MAIN CONTAINER -->
-
-
 
 
 
 
 <!-- //BOTTOM/ FOOTER --> 
-<div id="footer" class="footer">
-	<h2 class="animated fadeInLeft"> MEET THE TEAM </h2>
-	<h3 class="animated fadeInRight"> THE MASTER DEVELOPER'S PLAYLIST </h3>
-	<h4 class="animated fadeInUp"> Instructions </h4>
 
+
+<div id="footer" class="footer">
+	<h2 class="animated fadeInLeft">
+	<a href="meetTheTeam.html"> MEET THE TEAM </a>
+	</h2>
+	<br>
+	<h3 class="animated fadeInRight"> THE MASTER DEVELOPER'S PLAYLIST </h3>
 </div>
 
 <!-- //END FOOTER -->
-
 
 </body>
 
