--- a/app/index.html
+++ b/app/index.html
@@ -30,10 +30,22 @@
 <h1 class="animated rubberBand"> JAM!QUIZ! </h1>
 <br>
 <br>
-<p><font color="white"> Turn on your sound. Explore the keys. Then click <a href="game.html"> GAME </a> to quiz yourself on your favorite jams! </font></p>
+<p>
+  <font color="white"> Turn on your sound. Explore the keys. Click 
+  <button type="button" class="btn btn">
+  <a href="game.html">
+  <font color="white">
+  <span style="background-color: #9368b7"> 
+  GAME 
+  </span>
+  </font>
+  </a> 
+  </button>
+  to quiz yourself on your favorite jams! 
+</font>
+</p>
 
 <!-- //END HEADER -->
-
 
 
 
@@ -45,9 +57,9 @@
 <!-- //BOTTOM/ FOOTER -->
 
 <div id="footer" class="footer">
-	<h2 class="animated fadeInLeft">
-	<a href="meetTheTeam.html"> MEET THE TEAM </a>
-	</h2>
+  <button type="button" class="btn btn animated fadeInLeft">
+	<a href="meetTheTeam.html"><font color="white"><span style="background-color: #9368b7"> MEET THE TEAM </span></font></a>
+	</button>
 	<br>
 	<h3 class="animated fadeInRight"> THE MASTER DEVELOPER'S PLAYLIST </h3>
 </div>
