--- a/app/meetTheTeam.html
+++ b/app/meetTheTeam.html
@@ -21,7 +21,7 @@
 
 <body class="meetTheTeam">
 
-<h4> MeetTheTeam </h>
+<h4 class="animated rubberBand"> Meet!The!Team!</h4>
 
 
    <div id="team" class="team">
@@ -31,7 +31,7 @@
           <div class="col-lg-4 col-md-4">
             <img src="./public/images/cory.jpg" width="150" height="150" alt="Cory">
             <hr>
-            <b> CEO and Founder </b>
+            <b><center> CEO and Founder </center></b>
             <hr>
             <p> Lorem Ipsum </p>
           </div>
@@ -39,7 +39,7 @@
           <div class="col-lg-4 col-md-4">
             <img src="./public/images/ani.jpg" width="150" height="150" alt="Ani">
             <hr>
-            <b> CEO and Founder </b>
+            <b><center> CEO and Founder </center></b>
             <hr>
             <p> Lorem Ipsum </p>
           </div>
@@ -47,7 +47,7 @@
           <div class="col-lg-4 col-md-4">
             <img src="./public/images/max.jpg" width="180" height="150" alt="Max">
             <hr>
-            <b> CEO and Founder </b>
+            <b><center> CEO and Founder </center></b>
             <hr>
             <p> Lorem Ipsum </p>
           </div>
@@ -58,10 +58,12 @@
 <!-- //Footer : Routes Home & Game -->
 <div id="mTTFooter" class="mTTFooter">
 	<div class="div1">
-	<a href="index.html"><font color="white"> HOME </font></a>
+  <button type="button" class="btn btn-danger animated rollIn"><span style="background-color: #ffff00">
+	<a href="index.html"><font color="black"> HOME </font></a></span></button>
 	</div>
 	<div class="div2">
-	<a href="game.html"><font color="white"> GAME </font></a>
+  <button type="button" class="btn btn-danger animated rollIn"><span style="background-color: #ffff00">
+	<a href="game.html"><font color="black"> GAME </font></a></span></button>
 	</div>
 	</h2>
 </div>
