audio onclick, sorted out posts

--- a/app/index.html
+++ b/app/index.html
@@ -30,20 +30,19 @@
 <h1 class="animated rubberBand"> JAM!QUIZ! </h1>
 <br>
 <br>
-<p><font color="white"> Turn on your sound. Explore the keys. Then click <a href="game.html"> GAME </a> to quiz yourself on your favorite jams! </font></p>
+<p><font color="white"> Turn on your sound. Explore the keys. Then click <a href="/game"> GAME </a> to quiz yourself on your favorite jams! </font></p>
 
 <!-- //END HEADER -->
 
 
 
 
-<<<<<<< HEAD
-<!-- //BOTTOM/ FOOTER --> 
 
-
-=======
 <!-- //BOTTOM/ FOOTER -->
->>>>>>> b433cc4ea86aabec2d3d19b68868f656c33d7336
+
+
+<!-- //BOTTOM/ FOOTER -->
+
 <div id="footer" class="footer">
 	<h2 class="animated fadeInLeft">
 	<a href="meetTheTeam.html"> MEET THE TEAM </a>
