next button functionality

--- a/app/game.html
+++ b/app/game.html
@@ -128,7 +128,7 @@ Center:
 Music player/ something function
 game starts-->
 <div id="audioPlay"><button type="button" id="play"class="btn btn-primary submit">Play</button></div>
-
+<div id="audioPlay"><button type="button" id="next"class="btn btn-primary submit">Next</button></div>
 
       <div class="col-sm-4">
 
