--- a/app/index.html
+++ b/app/index.html
@@ -15,18 +15,9 @@
 
 <body class="index">
 
-<!-- // MUSIC GRID : CORY -->
-
-<!-- //On letter key or mouse click, snippet plays, and photo animates into DOM. -->
-
-<!-- //On keypress Audio -->
-
-<!-- //On keypress Photo -->
-
-<!-- // MUSIC GRID END -->
-
 <!-- //HEADER -->
-
+<div class="header" id="header">
+  <div class="row">
 <h1 class="animated rubberBand"> JAM!QUIZ! </h1>
 <br>
 <br>
@@ -35,30 +26,44 @@
   <button type="button" class="btn btn">
   <a href="game.html">
   <font color="white">
-  <span style="background-color: #9368b7"> 
   GAME 
-  </span>
   </font>
   </a> 
   </button>
   to quiz yourself on your favorite jams! 
 </font>
 </p>
-
+</div>
+</div>
 <!-- //END HEADER -->
 
+<!-- // MUSIC GRID : CORY -->
+
+<!-- //On letter key or mouse click, snippet plays, and photo animates into DOM. After 8 seconds photo disappears -->
+
+<!-- <script>
+  function play(){
+       var audio = document.getElementById("audio");
+       audio.play();
+  
+  }            
+  </script>
 
 
+        <input type="button" value="one"  onclick="play()" onkeypress="play()">
+        <audio id="audio" src="./public/audio/one.mov" ></audio> -->
+      
+<!-- //On keypress Audio -->
 
+<!-- //On keypress Photo -->
 
-
-
+<!-- // MUSIC GRID END -->
 
 <!-- //BOTTOM/ FOOTER -->
 
 <div id="footer" class="footer">
   <button type="button" class="btn btn animated fadeInLeft">
-	<a href="meetTheTeam.html"><font color="white"><span style="background-color: #9368b7"> MEET THE TEAM </span></font></a>
+	<a href="meetTheTeam.html"><font color="white"> MEET THE TEAM </font></a>
 	</button>
 	<br>
 	<h3 class="animated fadeInRight"> THE MASTER DEVELOPER'S PLAYLIST </h3>
@@ -67,5 +72,5 @@
 <!-- //END FOOTER -->
 
 </body>
-
 </html>
+</div>
