--- a/app/game.html
+++ b/app/game.html
@@ -119,6 +119,7 @@ Guess section-->
 
 
       </div>
+      <div id="audioVis"></div>
       <!--
 ROW 3
 Center
@@ -127,6 +128,7 @@ Audio VIsual space
 Center:
 Music player/ something function
 game starts-->
+<h3 id="answer"></h3>
 <div id="audioPlay"><button type="button" id="play"class="btn btn-primary submit">Play</button></div>
 <div id="audioPlay"><button type="button" id="next"class="btn btn-primary submit">Next</button></div>
 <div id="audioPlay"><button type="button" id="pause"class="btn btn-primary submit">Pause</button></div>
