--- a/app/game.html
+++ b/app/game.html
@@ -69,6 +69,17 @@ Guess section-->
 
             <button type="submit" class="btn btn-secondary submit">Submit</button>
           </form>
+<div class="guess" id="guess">
+
+  <div id="guess1">
+  </div>
+
+  <div id="guess2">
+  </div>
+
+  <div id="guess3">
+  </div>
+
 
 <script type="text/javascript">
 
@@ -175,6 +186,7 @@ ROW 4
 Left:
 Guess Logo-->
       <div class="col-sm-4">
+
 
       </div>
 
