--- a/app/game.html
+++ b/app/game.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>JamQuiz.</title>
 
-  <link rel="stylesheet" type="text/css" href="./public/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -152,9 +152,10 @@ Center:
 Music player/ something function
 game starts-->
 <h3 id="answer"></h3>
-<div id="audioPlay"><button type="button" id="play"class="btn btn-primary submit">Play</button></div>
+<div id="audioPlay"><button type="button" id="startGame"class="btn btn-primary submit">Play</button></div>
 <div id="audioPlay"><button type="button" id="next"class="btn btn-primary submit">Next</button></div>
-<div id="audioPlay"><button type="button" id="pause"class="btn btn-primary submit">Pause</button></div>
+<div id="audioPlay"><button type="button" id="pause" class="btn btn-primary submit">Pause</button>
+<div id="audioPlay"><button style="display:none" type="button" id="play"class="btn btn-primary submit">Play</button></div>
 
       <div class="col-sm-4">
 
