--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
 </head>
 
@@ -42,25 +43,10 @@
 <!-- // MUSIC GRID : CORY -->
 
 <!-- //On letter key or mouse click, snippet plays, and photo animates into DOM. After 8 seconds photo disappears -->
-
-<!-- <script>
-  function play(){
-       var audio = document.getElementById("audio");
-       audio.play();
-  
-  }            
-  </script>
-
-
-        <input type="button" value="one"  onclick="play()" onkeypress="play()">
-        <audio id="audio" src="./public/audio/one.mov" ></audio> -->
       
 <!-- //On keypress Audio -->
 
 <!-- //On keypress Photo -->
-
-<!-- //BOTTOM/ FOOTER -->
-
 
 <!-- // MUSIC GRID END -->
 
