--- a/app/index.html
+++ b/app/index.html
@@ -24,15 +24,15 @@
 <br>
 
 <p>
-  <font color="white"> Turn on your sound. Explore the keys. Click 
+  <font color="white"> Turn on your sound. Explore the keys. Click
   <button type="button" class="btn btn">
-  <a href="game.html">
+  <a href="/game">
   <font color="white">
-  GAME 
+  GAME
   </font>
-  </a> 
+  </a>
   </button>
-  to quiz yourself on your favorite jams! 
+  to quiz yourself on your favorite jams!
 </font>
 </p>
 </div>
@@ -43,7 +43,7 @@
 <!-- // MUSIC GRID : CORY -->
 
 <!-- //On letter key or mouse click, snippet plays, and photo animates into DOM. After 8 seconds photo disappears -->
-      
+
 <!-- //On keypress Audio -->
 
 <!-- //On keypress Photo -->
@@ -58,8 +58,8 @@
   function play1(){
        var audio = document.getElementById("audio1");
        audio.play();
-  
-  }    
+
+  }
 
   function photo1(){
     var photo = document.getElementById("photo1");
@@ -71,7 +71,7 @@
   var photo1 = ['1.jpg','2.jpg', '3.jpg', '4.jpg', '5.jpg', '6.jpg', '7.jpg', '8.jpg', '9.jpg', '10.jpg', '11.jpg', '12.jpg', '13.jpg', '14.jpg', '15.jpg', '16.jpg', '17.jpg', '18.jpg', '19.jpg', '20.jpg']
   var counter = 0;
 
-document.onkeyup = function(event) { 
+document.onkeyup = function(event) {
 $('#audio1').attr("src", './public/audio/' + audio1[counter])
 $('#audio1')[0].play()
 $('#mainimg').html("<img src='./public/images/"+photo1[counter]+"'/>")
