--- a/app/meetTheTeam.html
+++ b/app/meetTheTeam.html
@@ -29,7 +29,7 @@
           
             <b><center><span style="background-color:#cc0000"> ANI API </span></center></b>
             <hr>
-            <p class="animated fadeInUp"> Bitten by a radioactive project 2 assignment, young singer ANI gained the speed, strength and powers of a master back end developer. Adopting the name Ani API, Ani hoped to start a career using her new abilities. Taught that with great power comes great JSON packages, Ani has vowed to use her powers to help the less fortunate i.e. her teammates! </p>
+            <p class="animated fadeInUp"> Bitten by a radioactive project 2 assignment, young singer ANI gained the speed, strength and powers of a master back end developer. Adopting the name Ani API, Ani hoped to start a career using her new abilities. Taught that with great power comes great JSOOOOOOON packages, Ani has vowed to use her powers to help the less fortunate i.e. her teammates! </p>
           </div>
     <!--   //Max -->
           <div class="col-lg-4 col-md-4">
@@ -43,7 +43,7 @@
      
             <b><center><span style="background-color:#cc0000"> CORY CSS </span></center></b>
             <hr>
-            <p class="animated fadeInUp"> Born with a super-human aesthic eye and the power to heal from every wound incurred from sharp coding assignments, Cory CSS was captured by a secret GW Boot Camp and given an HTML, CSS, JS/JQ aresenal. After many broken code snippets, late nights snuggled with fantastic manuals, duck talks, and failed server connects, she's pulled up her bootstraps and officially become a style div-a! </p>
+            <p class="animated fadeInUp"> Born with a super-human aesthic eye and the power to heal from every wound incurred from sharp coding assignments, Cory CSS was captured by a secret GW Boot Camp and given an HTML, CSS, JS/JQ arsenal. After many broken code snippets, late nights snuggled with fantastic manuals, duck talks, and failed server connects, she's pulled up her bootstraps and officially become a style div-a! </p>
           </div>
         </div>
       </div>
