--- a/app/index.html
+++ b/app/index.html
@@ -23,10 +23,11 @@
 <br>
 <br>
 
+<center>
 <p>
   <font color="white"> Turn on your sound. Explore the keys. Click
   <button type="button" class="btn btn">
-  <a href="/game">
+  <a href="game.html">
   <font color="white">
   GAME
   </font>
@@ -35,6 +36,7 @@
   to quiz yourself on your favorite jams!
 </font>
 </p>
+</center>
 </div>
 </div>
 
