--- a/app/game.html
+++ b/app/game.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>JamQuiz.</title>
 
-  <!-- <link rel="stylesheet" type="text/css" href="/css/style.css"> -->
+   <link rel="stylesheet" type="text/css" href="/css/style.css"> 
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -158,7 +158,7 @@ Shows total points accumulated
       <div class="gifs" id="gifs-appear-here"></div>
 
 
-    
+
 
 
       </div>
