--- a/app/game.html
+++ b/app/game.html
@@ -5,45 +5,45 @@
   <meta charset="UTF-8">
   <title>JamQuiz.</title>
 
-<<<<<<< HEAD
+
    <link rel="stylesheet" type="text/css" href="/css/style.css">
-=======
+
 
   <link rel="stylesheet" type="text/css" href="./public/css/style.css">
 
-  <!-- <link rel="stylesheet" type="text/css" href="/css/style.css"> -->
+   <link rel="stylesheet" type="text/css" href="/css/style.css">
 
->>>>>>> e4b52c5a4f6e20cbcac075a6632310832131dde1
+
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-
-  <!--jquery-->
+<!--
+  jquery -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
-  <!-- bootstrap popper -->
+   <!-- bootstrap popper  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 
-  <!-- bootstrap css -->
+   <!-- bootstrap css  -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
-  <!-- bootstrap js -->
+   <!-- bootstrap js  -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </head>
 
 <body class="game">
 
-<!-- //ROW 1 : Title -->
+<!-- //ROW 1 : Title  -->
 <center>
  <h5 class="animated rubberBand"> JAM!QUIZ! </h5>
 </center>
 
 
-<!-- //ROW 2 : Guess Input, Timer & Points Based Timer -->
-<!-- Left Top
+<!-- //ROW 2 : Guess Input, Timer & Points Based Timer 
+ Left Top
 ROW 2
 left:
-Guess section-->
+Guess section -->
 <div class="row1" id="row1">
   <div class="container">
 <div id="messageBoard"></div>
