--- a/app/game.html
+++ b/app/game.html
@@ -49,8 +49,6 @@ Guess section -->
 <div id="messageBoard"></div>
 <!-- //ROW 2 : Guess Input, Timer & Points Based Timer -->
 
--->
-
 
 <div class="container">
 
@@ -213,7 +211,7 @@ Shows total points accumulated
 
 
 
-</script> -->
+</script>
 
       </div>
     </div>
